--- a/MovieHubFrontend/src/app/components/footer/footer.component.html
+++ b/MovieHubFrontend/src/app/components/footer/footer.component.html
@@ -1,58 +1,61 @@
-	<footer class="section-sm bg-tertiary">
+<footer class="section-sm bg-tertiary">
 
-		<div class="container">
+	<div class="container">
 
 
-			<div class="row justify-content-between">
+		<div class="row justify-content-between">
 
-				<div class="col-lg-3 col-md-6 col-12 mb-4">
-					<div class="footer-widget">
-						<h5 class="mb-4 text-primary font-secondary">Explore MovieHub</h5>
-						<ul class="list-unstyled">
-							<li class="mb-2"><a href="{% url 'movies' %}">Browse Movies</a></li>
-							<li class="mb-2"><a href="{% url 'actors' %}">Popular Actors</a></li>
-							<li class="mb-2"><a href="{% url 'favorites' %}">Your Favorites</a></li>
-							<li class="mb-2"><a href="{% url 'home' %}">Home</a></li>
-						</ul>
-					</div>
-				</div>
-	
-				<div class="col-lg-3 col-md-6 col-12 mb-4">
-					<div class="footer-widget">
-						<h5 class="mb-4 text-primary font-secondary">Get Involved</h5>
-						<ul class="list-unstyled">
-							<li class="mb-2"><a href="#!">Write a Review</a></li>
-							<li class="mb-2"><a href="#!">Submit a Movie</a></li>
-							<li class="mb-2"><a href="#!">Join Our Community</a></li>
-						</ul>
-					</div>
-				</div>
-	
-				<div class="col-lg-3 col-md-6 col-12 mb-4">
-					<div class="footer-widget">
-						<h5 class="mb-4 text-primary font-secondary">Help & Support</h5>
-						<ul class="list-unstyled">
-							<li class="mb-2"><a href="#!">Contact Us</a></li>
-							<li class="mb-2"><a href="#!">FAQs</a></li>
-							<li class="mb-2"><a href="#!">Privacy Policy</a></li>
-							<li class="mb-2"><a href="#!">Terms & Conditions</a></li>
-						</ul>
-					</div>
+			<div class="col-lg-3 col-md-6 col-12 mb-4">
+				<div class="footer-widget">
+					<h5 class="mb-4 text-primary font-secondary">Explore MovieHub</h5>
+					<ul class="list-unstyled">
+						<li class="mb-2"><a routerLink="/movies">Browse Movies</a></li>
+						<li class="mb-2"><a routerLink="/actors">Popular Actors</a></li>
+						<li class="mb-2"><a routerLink="/favorites">Your Favorites</a></li>
+						<li class="mb-2"><a routerLink="/">Home</a></li>
+					</ul>
 				</div>
 			</div>
 
-	
-			<div class="row align-items-center mt-5 text-center text-md-start">
-				<div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
-					<p class="mb-0">© MovieHub. All rights reserved.</p>
+			<div class="col-lg-3 col-md-6 col-12 mb-4">
+				<div class="footer-widget">
+					<h5 class="mb-4 text-primary font-secondary">Get Involved</h5>
+					<ul class="list-unstyled">
+						<li class="mb-2"><a href="#!">Write a Review</a></li>
+						<li class="mb-2"><a href="#!">Submit a Movie</a></li>
+						<li class="mb-2"><a href="#!">Join Our Community</a></li>
+					</ul>
 				</div>
-				<div class="col-lg-4 col-md-6 text-md-end mt-4 mt-md-0 ">
-					<ul class="list-unstyled list-inline mb-0 social-icons ">
-						<li class="list-inline-item me-3"><a title="Explore Facebook" class="text-black" href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a></li>
-						<li class="list-inline-item me-3"><a title="Explore Twitter" class="text-black" href="https://twitter.com/"><i class="fab fa-twitter"></i></a></li>
-						<li class="list-inline-item me-3"><a title="Explore Instagram" class="text-black" href="https://instagram.com/"><i class="fab fa-instagram"></i></a></li>
+			</div>
+
+			<div class="col-lg-3 col-md-6 col-12 mb-4">
+				<div class="footer-widget">
+					<h5 class="mb-4 text-primary font-secondary">Help & Support</h5>
+					<ul class="list-unstyled">
+						<li class="mb-2"><a href="#!">Contact Us</a></li>
+						<li class="mb-2"><a href="#!">FAQs</a></li>
+						<li class="mb-2"><a href="#!">Privacy Policy</a></li>
+						<li class="mb-2"><a href="#!">Terms & Conditions</a></li>
 					</ul>
 				</div>
 			</div>
 		</div>
-	</footer>
+
+
+		<div class="row align-items-center mt-5 text-center text-md-start">
+			<div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
+				<p class="mb-0">© MovieHub. All rights reserved.</p>
+			</div>
+			<div class="col-lg-4 col-md-6 text-md-end mt-4 mt-md-0 ">
+				<ul class="list-unstyled list-inline mb-0 social-icons ">
+					<li class="list-inline-item me-3"><a title="Explore Facebook" class="text-black"
+							href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a></li>
+					<li class="list-inline-item me-3"><a title="Explore Twitter" class="text-black"
+							href="https://twitter.com/"><i class="fab fa-twitter"></i></a></li>
+					<li class="list-inline-item me-3"><a title="Explore Instagram" class="text-black"
+							href="https://instagram.com/"><i class="fab fa-instagram"></i></a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</footer>
