--- a/MovieHubFrontend/src/app/components/movie-list/movie-list.component.html
+++ b/MovieHubFrontend/src/app/components/movie-list/movie-list.component.html
@@ -1,22 +1,4 @@
-<div class="container" style="position: relative;">
-
-    <!-- Flash Messages -->
-    <!-- <div *ngIf="messages?.length">
-      <div
-        *ngFor="let message of messages"
-        [ngClass]="{
-          'alert-success': message.type === 'success',
-          'alert-danger': message.type === 'warning',
-          'alert-info': message.type === 'info'
-        }"
-        class="alert alert-dismissible fade show"
-        role="alert"
-      >
-        {{ message.text }}
-        <button type="button" class="btn-close ms-auto" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-    </div> -->
-  
+<div class="container" style="position: relative;">  
     <!-- Header Section -->
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h1 class="mb-0" style="color: #7d1324;">Movies</h1>
@@ -26,19 +8,8 @@
           <!-- <a *ngIf="isAuthenticated && hasPermission('add_movie')"[routerLink]="['/add-movie']"> -->
             <a [routerLink]="'/movies/add'">
               <i class="bi bi-plus-square-fill mt-1 mr-2" style="color: #7d1324"></i>
-
             </a>
-
-          <!-- </a> -->
         </h1>
-  
-        <!-- Search Form -->
-        <!-- <form (ngSubmit)="onSearch()" class="d-flex mb-0">
-          <div class="input-group">
-            <input [(ngModel)]="searchQuery" name="query" class="form-control" placeholder="Search movies" />
-            <button type="submit" class="btn btn-primary">Search</button>
-          </div>
-        </form> -->
       </div>
     </div>
   
@@ -66,9 +37,7 @@
   
             <!-- Like Button -->
             <button (click)="toggleFavorite(movie.id)" 
-            
             style="background: none; border: none; cursor: pointer; position: absolute; bottom: 20px; right: 20px;">
-
               <i
                 class="bi"
                 [ngClass]="{
@@ -98,7 +67,7 @@
   <style>
     button:hover i {
       transform: scale(1.2);
-      color: #ff4081; /* Change color on hover */
+      color: #ff4081; 
     }
   </style>
   
