frontend todo gostoso com 1 console log q tenho medo de apagar, vou agr meter os forms validados

--- a/MovieHubFrontend/src/app/components/navbar/navbar.component.html
+++ b/MovieHubFrontend/src/app/components/navbar/navbar.component.html
@@ -20,7 +20,7 @@
         <form id="logoutForm" class="navbar-right" *ngIf="authenticated">
           <ul class="nav navbar-nav navbar-right">
             <li><span class="navbar-brand">{{himessage}}</span></li>
-            <li class="d-flex align-items-center"><a class="btn btn-primary " (click)="logout()">Log Off</a></li>
+            <li class="d-flex align-items-center"><a class="btn btn-primary" style="color:white" (click)="logout()">Log Out</a></li>
           </ul>
         </form>
         <ul class="nav navbar-nav navbar-right" *ngIf="!authenticated">
